feat(BE): implement  in travel module